--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        android:name="AssassinGame">
+        android:name="aau.med3.assassin.AssassinGame">
         
         <activity
             android:name="com.example.firstapp.MainActivity"
@@ -29,7 +29,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.firstapp.SignInActivity"
+            android:name="aau.med3.assassin.SignInActivity"
             android:label="@string/title_activity_sign_in"
             android:parentActivityName="com.example.firstapp.MainActivity" >
             <meta-data
