--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.firstapp"
+    package="aau.med3.assassin"
     android:versionCode="1"
     android:versionName="1.1" >
 
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="17" />
-    <uses-feature android:name="android.hardware.camera"/>
+
+    <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name="aau.med3.assassin.AssassinGame"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:name="aau.med3.assassin.AssassinGame">
-        
+        android:theme="@style/AppTheme" >
         <activity
             android:name="com.example.firstapp.MainActivity"
             android:label="@string/app_name" >
@@ -35,6 +36,31 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.firstapp.MainActivity" />
+        </activity>
+        <activity
+            android:name="aau.med3.assassin.LoginActivity"
+            android:label="@string/title_activity_login"
+            android:parentActivityName="aau.med3.assassin.activities.MainActivity"
+            android:windowSoftInputMode="adjustResize|stateVisible" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="aau.med3.assassin.activities.MainActivity" />
+        </activity>
+        <activity
+            android:name="aau.med3.assassin.GameActivity"
+            android:label="@string/title_activity_game"
+            android:parentActivityName="aau.med3.assassin.activities.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="aau.med3.assassin.activities.MainActivity" />
+        </activity>
+        <activity
+            android:name="aau.med3.assassin.SettingsActivity"
+            android:label="@string/title_activity_settings"
+            android:parentActivityName="aau.med3.assassin.activities.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="aau.med3.assassin.activities.MainActivity" />
         </activity>
     </application>
 
