--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="aau.med3.assassin"
+<manifest package="aau.med3.assassin"
     android:versionCode="1"
-    android:versionName="1.1" >
+    android:versionName="1.1" xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-sdk
         android:minSdkVersion="11"
@@ -13,9 +12,10 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
 
     <application
-        android:name="AssassinGame"
+        android:name="aau.med3.assassin.AssassinGame"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -55,8 +55,8 @@
                 android:value="aau.med3.assassin.activities.MainActivity" />
         </activity>
         <activity
-            android:name="aau.med3.assassin.activities.SettingsActivity"
-            android:label="@string/title_activity_settings"
+            android:name="aau.med3.assassin.activities.UserInfoActivity"
+            android:label="@string/title_activity_user_info"
             android:parentActivityName="aau.med3.assassin.activities.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
