--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
 
     <application
         android:name="aau.med3.assassin.AssassinGame"
@@ -62,6 +63,13 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="aau.med3.assassin.activities.MainActivity" />
         </activity>
+        <service 
+           android:name=".AssassinService"
+           android:process=":remote" >
+            <intent-filter>
+                <action android:name="aau.med3.assassin.AssassinService"/>
+            </intent-filter>            
+        </service>
     </application>
 
 </manifest>
