--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,13 +7,23 @@
         android:minSdkVersion="10"
         android:targetSdkVersion="17" />
 
+    <permission android:name="aau.med3.assassin.permission.C2D_MESSAGE" android:protectionLevel="signature"/>
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="aau.med3.assassin.permission.C2D_MESSAGE"/>
+    <!-- App receives GCM messages. -->
+	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+	<!-- GCM requires a Google account. -->
+	<uses-permission android:name="android.permission.GET_ACCOUNTS" />
+	<!-- Keeps the processor from sleeping when a message is received. -->
+	<uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:name="aau.med3.assassin.AssassinGame"
@@ -64,12 +74,21 @@
                 android:value="aau.med3.assassin.activities.MainActivity" />
         </activity>
         <service 
-           android:name=".AssassinService"
-            >
+           android:name=".AssassinService" >
             <intent-filter>
                 <action android:name="aau.med3.assassin.AssassinService"/>
             </intent-filter>            
         </service>
+        <service android:name=".GCMIntentService" />
+        <receiver 
+            android:name="com.google.android.gcm.GCMBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+                <category android:name="aau.med3.assassin" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
