--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,29 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="aau.med3.assassin"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="aau.med3.assassin"
     android:versionCode="1"
-    android:versionName="1.1" xmlns:android="http://schemas.android.com/apk/res/android">
+    android:versionName="1.1" >
 
     <uses-sdk
         android:minSdkVersion="10"
         android:targetSdkVersion="17" />
 
-    <permission android:name="aau.med3.assassin.permission.C2D_MESSAGE" android:protectionLevel="signature"/>
+    <permission
+        android:name="aau.med3.assassin.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.BLUETOOTH"/>
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
-    <uses-permission android:name="android.permission.VIBRATE"/>
-    <uses-permission android:name="aau.med3.assassin.permission.C2D_MESSAGE"/>
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="aau.med3.assassin.permission.C2D_MESSAGE" />
     <!-- App receives GCM messages. -->
-	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
-	<!-- GCM requires a Google account. -->
-	<uses-permission android:name="android.permission.GET_ACCOUNTS" />
-	<!-- Keeps the processor from sleeping when a message is received. -->
-	<uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <!-- GCM requires a Google account. -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <!-- Keeps the processor from sleeping when a message is received. -->
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:name="aau.med3.assassin.AssassinGame"
@@ -73,22 +77,29 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="aau.med3.assassin.activities.MainActivity" />
         </activity>
-        <service 
-           android:name=".AssassinService" >
+
+        <service android:name="aau.med3.assassin.AssassinService" >
             <intent-filter>
-                <action android:name="aau.med3.assassin.AssassinService"/>
-            </intent-filter>            
+                <action android:name="aau.med3.assassin.AssassinService" />
+            </intent-filter>
         </service>
-        <service android:name=".GCMIntentService" />
-        <receiver 
+        <service android:name="aau.med3.assassin.GCMIntentService" />
+
+        <receiver
             android:name="com.google.android.gcm.GCMBroadcastReceiver"
             android:permission="com.google.android.c2dm.permission.SEND" >
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+
                 <category android:name="aau.med3.assassin" />
             </intent-filter>
         </receiver>
+
+        <activity
+            android:name="aau.med3.assassin.activities.StatusActivity"
+            android:label="@string/title_activity_status" >
+        </activity>
     </application>
 
 </manifest>
